k8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-external
  labels:
    platform: supporthub
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
