k8s/quizbot-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quiz-backend
  labels:
    platform: supporthub
spec:
  selector:
    app: quiz-backend
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
