k8s/quizbot-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quiz-frontend
  labels:
    platform: supporthub
spec:
  selector:
    app: quiz-frontend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
