k8s/triage-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: triage-backend
  labels:
    platform: supporthub
spec:
  selector:
    app: triage-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
